# entirius-service-template-django

./: .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml
apps/example/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/example/tests/: test_models.py  test_views.py
main/: asgi.py  settings.py  settings_example.py  urls.py  wsgi.py
